# pydatacamp

./: .gitignore  pyproject.toml
datetime/: datetime.ipynb  datetime_advanced.ipynb
numpy/: numpy_myfile.ipynb
regression/: GLM.ipynb  regression_advanced  regression_basics.ipynb  soglasie.ipynb  uronext_data.csv  uronext_data_2.csv  uronext_mmm.ipynb
regression/pdf_glm_generalized_linear_models/: chapter3.docx
regression/soglasie_data/: data_soglasie_mmm.xlsx  funk.py  predicted_aided_awareness.csv  predicted_aided_awareness_01.csv
statistics/: basics_stats.ipynb
time-series-analysis/pdf-time-series-basics/: time-series.ipynb
toolbox/: toolbox_tips.ipynb
